--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <span class="section-stats-info section-stats-yellow">Expence</span>
           </div>
           <div class="graphic-wrapper">
-          <img src="../img/graphic.png" alt="statistic information">
+          <img src="img/graphic.png" alt="statistic information">
           <span class="stats-point-med">med</span>
           <span class="stats-point-max">max</span>
         </div>
